@@ -10,6 +10,7 @@ Changelog
  * More kindly handled the *break* user's action.
  * Added the **--verbose** option to print some more message infos.
  * Added the **--quiet** option to output nothing at all.
+ * Removed the *_same_file* function. Python already have a *filecmp* module!
 
 0.2.0
 -----
